[gd_scene load_steps=23 format=3 uid="uid://dda8juf8g7da7"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_a31at"]
[ext_resource type="Texture2D" uid="uid://cxr3e74qicdkx" path="res://assets/sprites/characters/slime.png" id="2_1eir8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rtu7u"]
atlas = ExtResource("2_1eir8")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwyqu"]
atlas = ExtResource("2_1eir8")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig5h7"]
atlas = ExtResource("2_1eir8")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jco8"]
atlas = ExtResource("2_1eir8")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwl8w"]
atlas = ExtResource("2_1eir8")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j0ye"]
atlas = ExtResource("2_1eir8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1kb4"]
atlas = ExtResource("2_1eir8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmofv"]
atlas = ExtResource("2_1eir8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi1qt"]
atlas = ExtResource("2_1eir8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4avsy"]
atlas = ExtResource("2_1eir8")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2u6j"]
atlas = ExtResource("2_1eir8")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38yca"]
atlas = ExtResource("2_1eir8")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uvsd"]
atlas = ExtResource("2_1eir8")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3mqo"]
atlas = ExtResource("2_1eir8")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2137"]
atlas = ExtResource("2_1eir8")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3nel"]
atlas = ExtResource("2_1eir8")
region = Rect2(192, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_em541"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtu7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwyqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig5h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jco8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwl8w")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j0ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1kb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmofv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi1qt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4avsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2u6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38yca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uvsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3mqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2137")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3nel")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i6rll"]
radius = 76.1643

[sub_resource type="CircleShape2D" id="CircleShape2D_pxlgj"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n0a10"]

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_a31at")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_em541")
animation = &"idle"
autoplay = "idle"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_i6rll")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_pxlgj")

[node name="slime_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime_hitbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_n0a10")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.867898, 0.0222196, 2.88785e-07, 1)
offset_left = -5.0
offset_top = 4.0
offset_right = 95.0
offset_bottom = 34.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="slime_hitbox" to="." method="_on_slime_hitbox_body_entered"]
[connection signal="body_exited" from="slime_hitbox" to="." method="_on_slime_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
